force-app/main/default/objects/Selling_Activity_Market__c/Selling_Activity_Market__c.object-meta.xml
<CustomObject>
    <label>Selling Activity Market</label>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selling Activity Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>