force-app/main/default/objects/Selling_Activity_Market__c/fields/Dispenser_Model__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Model__c</fullName>
    <label>Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Types</valueSetName>
    </valueSet>
</CustomField>