force-app/main/default/objects/Selling_Activity_Market__c/fields/FS_Acitvation_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Acitvation_Status__c</fullName>
    <formula>IF(Market_Activation_Date__c &lt;=Today(),&#39;Active&#39;,&#39;InActive&#39;)</formula>
    <label>Activation Status</label>
    <type>Text</type>
</CustomField>