force-app/main/default/objects/Selling_Activity_Market__c/fields/Market_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Market_Activation_Date__c</fullName>
    <label>Market Activation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>